[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game/Menus/Textures/Keyboard.png" type="Texture" id=2]
[ext_resource path="res://Game/Menus/Textures/SlotSelect.png" type="Texture" id=3]
[ext_resource path="res://Game/Menus/Fonts/Nunito-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Game/Menus/CharactersPlayerSlot.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 4 )

[node name="CharactersPlayerSlot" type="VBoxContainer"]
margin_right = 98.0
margin_bottom = 180.0
size_flags_horizontal = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotState" type="TextureRect" parent="."]
margin_right = 98.0
margin_bottom = 132.0
size_flags_horizontal = 7
size_flags_vertical = 7
size_flags_stretch_ratio = 5.46
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="SlotState"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkinTextureRect" type="TextureRect" parent="SlotState/CenterContainer"]
margin_left = 128.0
margin_top = 128.0
margin_right = 128.0
margin_bottom = 128.0

[node name="InputDevice" type="TextureRect" parent="."]
margin_top = 136.0
margin_right = 98.0
margin_bottom = 160.0
size_flags_horizontal = 7
size_flags_vertical = 7
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="PlayerName" type="Label" parent="."]
margin_top = 164.0
margin_right = 98.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.32549, 0.360784, 0.407843, 1 )
text = "RootKernel"
align = 1
